<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LogInActivity!</string>
    <string name="app_name">TaskManager</string>
	<string name="enter">Sign in</string>
	<string name="registration">Register</string>
	<string name="login">Login</string>
	<string name="password">Password</string>
	<string name="firstName">First name</string>
	<string name="lastName">Last name</string>
	<string name="remember">Register</string>
	<string name="send">Відправити</string>
	<string name="clear">Очистити</string>
	<string name="message">Написати завдання</string>
	<string name="search">Пошук</string>
	<string name="priority">Виберіть пріорітет повідомлення</string>
</resources>