<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical" >

		<TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_marginBottom="20dp"
	        android:text="@string/app_name"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
    
        <EditText
	        android:id="@+id/loginET"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/passwordET"
	        android:layout_alignRight="@+id/passwordET"
	        android:layout_below="@+id/textView1"
	        android:layout_marginBottom="20dp"
	        android:background="@drawable/rounded_edittext"
	        android:ems="10"
	        android:hint="@string/login"
	        android:padding="8dp" />
	    
	    <EditText
	        android:id="@+id/passwordET"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/linearLayout1"
	        android:layout_alignRight="@+id/linearLayout1"
	        android:layout_below="@+id/loginET"
	        android:layout_marginBottom="20dp"
	        android:background="@drawable/rounded_edittext"
	        android:ems="10"
	        android:hint="@string/password"
	        android:padding="8dp" />

        <requestFocus />


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordET"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/loginB"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:text="@string/enter" />

        <Button
            android:id="@+id/registerB"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:text="@string/registration" />
    </LinearLayout>
</RelativeLayout>